--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-	<script src="https://cdn.jsdelivr.net/npm/@zerodevx/svelte-toast@0"></script>
 	<meta charset="utf-8" />
 	<meta name="description" content="" />
 	<script src="https://cdn.tailwindcss.com"></script>
@@ -11,15 +10,13 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link
-		href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+		href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
 		rel="stylesheet" />
-	<script>
-		const toastApp = new SvelteToast({
-			// Set where the toast container should be appended into
-			target: document.body,
-			props: {}
-		})
-	</script>
+	<style>
+		:root {
+			font-family: "Nunito", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		}
+	</style>
 	%svelte.head%
 </head>
 
